# cells

./: .gitignore  LICENSE  app.py  pyproject.toml
cells/backend/: __init__.py
cells/backend/core/: application.py
cells/frontend/: __init__.py
cells/frontend/src/: main.js
cells/frontend/src/core/: cells.js  dna_points.js  key_handler.js  load_sprites.js  messages.js  offline_game.js  upgrade_deck_ui.js  upgrades.js  utils.js
cells/frontend/src/scenes/: offline_game.js
cells/frontend/src/scenes/UI/: game_ui.js  upgrade_deck.js
cells/frontend/src/types/: types.ts
cells/frontend/templates/: index.html
